<resources>
    <string name="app_name">My Expenses</string>
    <string name="list_of_expenses">List of expenses</string>
    <string name="back">Back</string>
    <string name="add_expense">Add expense</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_description">Expense description</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Additional description</string>
    <string name="hint_amount">Amount of the expense</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="default_categories">Default categories</string>
    <string name="budget_management">Budget management</string>
    <string name="insights">Insights</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create an account</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="hint_confirm_password">Type your password again</string>
    <string name="catmarketing">Marketing</string>
    <string name="catfees">Fees</string>
    <string name="catdebt">Debt</string>
    <string name="catproducts">Products</string>
    <string name="category_name">Category name</string>
    <string name="addcat">Add category</string>
    <string name="username">Username</string>
    <string name="hint_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="signup">Sign up</string>
    <string name="donothaveanaccount">Do not have an account?</string>
    <string name="manage_expenses">Manage my expenses</string>
    <string name="manage_budget">Budget</string>
    <string name="percentage">Percentage</string>
    <string name="welcome_msg">Welcome to your startup expense tracker!!</string>
    <string name="quote">----------------------------\nEarn your success based on service to others, not at the expense of others !!!\n--------------</string>
</resources>