<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2C6E1"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtwlcmmsg"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#203443"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="30dp">

            <TextView
                android:id="@+id/txtusername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical"
                android:text="@string/username"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edttxtusername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edttxtpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/txtconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:gravity="center_vertical"
                android:text="@string/confirm_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edttxtconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:inputType="numberPassword" />

            <Button
                android:id="@+id/btnsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:background="#0061FF"
                android:text="@string/signup"
                android:textColorLink="#6BAEE4" />

            <Button
                android:id="@+id/btnback"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="#0061FF"
                android:text="@string/back" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>